# mcp-ssh-gateway

./: .gitignore  DEVELOPER.md  Dockerfile  EDGE.md  README.md  SECURITY.md  agent.py  app.py  entrypoint.sh  main.py  pyproject.toml  refactoring_plan.md  ssh_controller.py
.devcontainer/: Dockerfile  devcontainer.json
.roo/: mcp.json  rules.md
agent/: __init__.py  config.py  connection_loader.py  connection_pool.py  connection_result.py  connection_runner.py  edge_discovery.py  file_utils.py  main.py  mcp_handler.py  mcp_handlers.py  mcp_request_handler.py  run_agent.py  ssh_controller.py  ssh_monitor.py
agent/connectionpool/: __init__.py  config_loader.py  connection.py  connection_loader.py  connection_pool.py  connection_runner.py  errors.py  loader.py  pool.py
agent/identity/: models.py  service.py
agent/nodes/: handshake.py  models.py  registry.py  service.py
docs/: ARCHITECTURAL_DECISIONS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER.md  DOCUMENTATION_GUIDE.md  EDGE.md  MCP_VALIDATION_GUIDE.md  SECURITY.md  TESTING_STRATEGY.md  adr-stateless-streamable-http.md
plans/: direct-node-completion-slice.md  docs-update-plan.md  functional-ssh-test-fixture.md  host-key-validation-slice.md  node-execution-handshake-slice.md  node-management-api-slice.md  node-management-delivery-plan.md  realistic-sshd-fixture-test-slice.md  roo-assisted-mcp-validation-loop.md
plans/archive/: functional-ssh-test-fixture.md  node-management-api-slice.md  node-management-delivery-plan.md
resources/node/: handshake.sh
scripts/: force_command.sh  os_info.sh  start-agent.sh
tests/: conftest.py  sshd_fixture.py
tests/agent/: test_mcp_identity_tools.py  test_mcp_node_tools.py  test_run_agent_wiring.py
tests/agent/connectionpool/: conftest.py  test_connection.py  test_pool.py
tests/agent/identity/: test_agent_identity_service.py
tests/agent/nodes/: conftest.py  test_handshake_service.py  test_node_execution_service.py  test_node_lifecycle.py  test_node_readiness.py  test_node_service.py  test_node_status_info.py  test_registry.py
tests/functional/: test_add_node_functional.py  test_connection_functional.py  test_node_execution_functional.py  test_node_service_functional.py  test_pool_functional.py  test_sshd_fixture.py
tests/integration/: test_app_stdio.py  test_utils.py
