[project]
name = "mcp-ssh-gateway"
version = "0.1.0"
description = "MCP-compatible SSH Gateway agent"
authors = [{name = "Oliver Lanz"}]
license = "Apache-2.0"
dependencies = [
  "mcp[cli]",
  "paramiko",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "requests",
]

[tool.setuptools]
packages = ["agent"]

[tool.pytest.ini_options]
markers = [
    "functional: marks tests that require real system resources (sshd, network)",
    "requires_sshd: marks tests that require a running sshd fixture",
    "integration: marks integration tests that start the app or external processes (deselect with '-m not integration')",
    "requires_password_sshd: marks tests that require the password-enabled sshd fixture with sshbootstrap user",
]
filterwarnings = [
    "error",
    # Paramiko's SSH transport uses internal buffered file objects that are
    # closed asynchronously by the GC after the test. This is a known Paramiko
    # resource management issue unrelated to project code.
    "ignore::ResourceWarning:paramiko",
]
