[project]
name = "mcp-ssh-gateway"
version = "0.1.0"
description = "MCP-compatible SSH Gateway agent"
authors = [{name = "Oliver Lanz"}]
license = "Apache-2.0"
dependencies = [
  "mcp[cli]",
  "paramiko",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "requests",
]

[tool.setuptools]
packages = ["agent"]

[tool.pytest.ini_options]
markers = [
    "functional: marks tests that require real system resources (sshd, network)",
    "requires_sshd: marks tests that require a running sshd fixture",
    "integration: marks integration tests that start the app or external processes (deselect with '-m not integration')",
    "requires_password_sshd: marks tests that require the password-enabled sshd fixture with sshbootstrap user",
]
filterwarnings = [
    "error",
    # Paramiko transport cleanup emits ResourceWarning on GC collection of SSH transports.
    # This is a known Paramiko lifecycle issue, not a project-owned leak.
    # project-owned ResourceWarnings (subprocess pipes, files) still fail.
    "ignore::ResourceWarning:paramiko.transport",
]
